--- a/ppw_book/tugas-2-vsm.ipynb
+++ b/ppw_book/tugas-2-vsm.ipynb
@@ -18,6 +18,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "722e945d-3412-4f30-a7a8-417a8675d8e8",
+   "metadata": {},
+   "source": [
+    "Vector Space Model (VSM) adalah model matematika yang digunakan untuk merepresentasikan dokumen teks sebagai vektor dari identifikator (seperti kata-kata atau token). Model ini adalah bagian fundamental dalam sistem informasi pencarian dan teknik pemrosesan bahasa alami untuk menilai dan mengurutkan dokumen berdasarkan relevansinya terhadap suatu query."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f80304-d61f-46ea-a1ba-9f8e5b442191",
+   "metadata": {},
+   "source": [
+    "### Konsep Dasar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4673cd2-0e3f-489e-8f5a-6b827b9feedb",
+   "metadata": {},
+   "source": [
+    "Dalam VSM, setiap dimensi vektor mewakili sebuah term (kata) yang unik dalam dokumen. Nilai dalam vektor ini bisa merupakan frekuensi kemunculan kata, atau bobot yang lebih kompleks seperti TF-IDF, yang menggabungkan frekuensi kata dalam dokumen (TF) dan kebalikan frekuensi dokumen (IDF). Setiap dokumen direpresentasikan sebagai titik dalam ruang vektor ini."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d4cfdc-c0b6-4466-94b2-a87c0204b50e",
+   "metadata": {},
+   "source": [
+    "### Kegunaan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd5f92ec-6bb7-4089-807f-3847c79fe69d",
+   "metadata": {},
+   "source": [
+    "Model ini sangat berguna dalam sistem pencarian dan pengambilan informasi karena memungkinkan operasi seperti pencarian kecocokan dan perankingan dilakukan secara matematis. VSM memfasilitasi pencocokan query pencarian dengan koleksi dokumen melalui perhitungan kedekatan vektor, menggunakan teknik seperti cosine similarity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c96786b4-697a-4a85-9284-af3ca696893e",
+   "metadata": {},
+   "source": [
+    "### Keunggulan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb653836-7280-4c87-93b7-ca7f7a2528e6",
+   "metadata": {},
+   "source": [
+    "- **Flexibilitas**: VSM memungkinkan penyertaan berbagai metode penghitungan bobot selain frekuensi term, seperti TF-IDF, yang meningkatkan efektivitas model dalam menghadapi isu seperti kata-kata yang sangat umum yang muncul di banyak dokumen.\n",
+    "- **Efisiensi**: Meskipun representasi vektor dapat menjadi sangat besar, teknik seperti sparse matrix operations memungkinkan pemrosesan yang efisien.\n",
+    "- **Kemampuan Komparatif**: Dengan merepresentasikan dokumen sebagai vektor, mudah untuk mengukur kesamaan antar dokumen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5052984f-c71f-4a09-9e30-13c45032b475",
+   "metadata": {},
+   "source": [
+    "### Keterbatasan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a759d5f-a50d-4781-bb6e-33cf3e6b0813",
+   "metadata": {},
+   "source": [
+    "- **Semantik**: VSM tidak memperhitungkan konteks dan makna semantik dari kata-kata, yang bisa mengakibatkan dokumen yang sebenarnya berkaitan tidak dikenali sebagai relevan.\n",
+    "- **Sinonim dan Polisemi**: Kata-kata dengan makna ganda atau sinonim mungkin tidak diproses dengan efektif, karena model ini berfokus pada kata-kata sebagai entitas independen tanpa mempertimbangkan hubungan semantiknya."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfea633e-438b-4411-9fd3-8df2c0a8021c",
    "metadata": {},
    "source": [
@@ -25,11 +100,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ad26a08e-6ff0-469c-bbec-759abd0ccd37",
+   "metadata": {},
+   "source": [
+    "Metode  Term  Frequency-Inverse Document Frequency (TF-IDF) adalah salah satu  teknik  representasi  teks yang mengonversi kata-kata menjadi  nilai  numerik  berdasarkan  seberapa  sering kata tersebut  muncul  dalam  teks  serta  seberapa  umumnya kata tersebut  dalam  kumpulan  dokumen yang tersedia. Bobot  numerik yang dihasilkan oleh metode  ini  sering  disebut  sebagai  bobot TF-IDF."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "71beef28-5cfe-4b01-9966-4c94165d3c9b",
    "metadata": {},
    "source": [
-    "### TF"
+    "### Term Frequency (TF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf7b398-77ba-4207-9a21-18f601756fe1",
+   "metadata": {},
+   "source": [
+    "**Term Frequency**: Dalam  dokumen d, frekuensi  merepresentasikan  jumlah  kemunculan kata t. Oleh karena  itu, kita  dapat  melihat  bahwa  frekuensi  menjadi  lebih  relevan  ketika  sebuah kata muncul di dalam  teks, yang mana hal  ini  rasional. Karena urutan  istilah  tidak  signifikan, kita  dapat  menggunakan  vektor  untuk  menggambarkan  teks  dalam  kantong model istilah. Untuk  setiap  istilah  tertentu  dalam  teks, ada  sebuah  entri  dengan  nilai yang merupakan  frekuensi  istilah. Bobot  sebuah  istilah yang muncul  dalam  sebuah  dokumen  secara  sederhana  sebanding  dengan  frekuensi  istilah  tersebut\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "    tf(t, d) = \\frac{\\text{jumalah } t \\text{ dalam } d}{\\text{jumlah kata dalam } d}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Dokument Frequency**: mengukur  seberapa  umumnya  suatu kata terjadi di seluruh  koleksi  dokumen. Konsep  ini  mirip  dengan Term Frequency (TF), namun  perbedaannya  terletak pada bagaimana  kita  menghitung  kemunculan  suatu kata. Di TF, kita  melihat  seberapa  sering kata muncul  dalam  satu  dokumen  tertentu, sedangkan di DF, kita  melihat  berapa  banyak  dokumen yang mengandung kata tersebut di dalam  keseluruhan  koleksi  dokumen. Jadi, Document Frequency (DF) adalah  jumlah  dokumen yang memuat  suatu kata.\n",
+    "\n",
+    "$$\n",
+    "    df(t) = \\text{kemunculan } t \\text{ dalam } dokumen \n",
+    "$$\n"
    ]
   },
   {
@@ -37,7 +142,28 @@
    "id": "5b485854-a92c-471d-80d2-1f2da7440d19",
    "metadata": {},
    "source": [
-    "### IDF"
+    "### Inverse Document Frequency (IDF)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a871eb4d-7059-4922-b2ca-863cd7acdcad",
+   "metadata": {},
+   "source": [
+    "**Inverse Document Frequency (IDF)**: mengevaluasi tingkat relevansi suatu kata dalam konteks pencarian. Ketika mencari informasi, tujuan utama adalah menemukan dokumen yang paling sesuai dengan permintaan pengguna. Mengingat bahwa Term Frequency (TF) memperlakukan semua kata dengan nilai yang sama, frekuensi kata itu sendiri tidak cukup untuk menilai  bobot istilah dalam sebuah dokumen. IDF pertama-tama mencari frekuensi kemunculan dokumen untuk suatu kata dengan menghitung jumlah dokumen yang mengandung kata tersebut.\n",
+    "\n",
+    "$$\n",
+    "    df(t) = N(t)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "    df(t) = \\text{Frekuensi dokumen dari suatu istilah t}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "    N(t) = \\text{Jumlah } dokumen \\text{ yang mengandung istilah } t\n",
+    "$$"
    ]
   },
   {
@@ -46,6 +172,28 @@
    "metadata": {},
    "source": [
     "### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05dea39c-7929-49c9-84f2-149f1080638b",
+   "metadata": {},
+   "source": [
+    "Term Frequency adalah jumlah kemunculan suatu istilah dalam satu dokumen saja, sedangkan Document Frequency adalah jumlah dokumen terpisah tempat istilah tersebut muncul. Namun, frekuensi ini bergantung pada seluruh korpus. IDF merupakan jumlah dokumen dalam korpus yang dipisahkan oleh frekuensi teks. Dengan kata lain, IDF mengukur seberapa umum atau langka suatu kata dalam seluruh koleksi dokumen.\n",
+    "\n",
+    "$$\n",
+    "    idf(t) = \\frac{N}{df(t)}=\\frac{N}{N(t)}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "    idf(t) = log_2 \\frac{N}{df(t)}\n",
+    "$$\n",
+    "\n",
+    "Maka dari itu rumus dari TF * IDF adalah sebagai berikut:\n",
+    "\n",
+    "$$\n",
+    "    tf-idf(t, d) = tf(t, d) * idf(t)\n",
+    "$$"
    ]
   },
   {
